--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,21 @@
 .row {
-  width: 100%;
+  border-top: 1px solid;
+  border-left: 1px solid;
+  border-right: 1px solid;
 }
-.col1 {
-  width: 8.3333333333%;
+
+.bottom {
+  border-bottom: 1px solid;
 }
-.col2 {
-  width: 16.6666666%;
+
+.search {
+
 }
-.col3 {
-  width: 25%;
+
+.title {
+
 }
-.col4 {
-  width: 33.3333%;
-}
-.col5 {
-  width: 41.66666666%;
-}
-.col6 {
-  width: 50%;
-}
-.col7 {
-  width: 58.33333%;
-}
-.col8 {
-  width: 66.666667%;
-}
-.col9 {
-  width: 75%
-}
-.col10 {
-  width: 83.3333333%;
-}
-.col11 {
-  width: 91.6666667%;
-}
-.col12 {
-  width: 100%;
+
+.view {
+
 }
