--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ nav {
   transform: translate(-300px, 0);
   /* Optionally, we animate the drawer. */
   transition: transform 0.3s ease;
+  margin-top: 50px;
 }
 nav.open {
   -webkit-transform: translate(0, 0);
